# demo-data-platform

./: .gitignore  README.md  initialize_duckdb.sh  pyproject.toml
code/airflow/dags/: query_pythonpath.py
code/data_profiling/: profile_category.py  profile_schema_category.py
code/pipelines/source/: gpr_test.py
code/schemas/schema_builder/: schema_builder.py
code/schemas/source/gpr/: schemas.json
src/airflow/: README.md
src/airflow/dags/: excel_ingestion_dag.py
src/configs/source/: example.yaml
src/data_profiling/: profile_excel_files.py  profile_schema_category.py
src/helpers/data_profiling/: README.md  profile_excel_files.py  profile_schema_category.py
src/interfaces/: schema_manager.py
src/interfaces/loaders/: README.md  base_loader.py  excel_loader.py
src/interfaces/writers/: README.md  base_writer.py  csv_writer.py  duckdb_writer.py
src/pipelines/: README.md
src/pipelines/source/: excel_ingestion_process.py  gpr_test.py
src/schemas/schema_builder/: schema_builder.py  source_schema_variations.py
src/schemas/source/gpr/: Variation_1A.yaml  Variation_1B.yaml
src/schemas/source/pavement/: schemas.json
tests/airflow/: test_dag_loader.py  test_excel_ingestion_dag.py
tests/helpers/data_profiling/: test_profile_excel_files.py  test_profile_schema_category.py
tests/integration/pipelines/source/: test_excel_pipeline.py
tests/interfaces/: test_schema_manager_class.py
tests/interfaces/loaders/: test_excel_loader.py
tests/interfaces/writers/: test_csv_writer.py  test_duckdb_writer.py
tests/schemas/source/test/: test_schema.yaml
